# linkpad

./: .gitignore  Cargo.toml  README.adoc  bun.lockb  docs  package.json  pnpm-lock.yaml  test.html  tsconfig.json  tsconfig.node.json  vite.config.ts
actions/: Cargo.toml
actions/buttons/: notify.lua
actions/src/: lib.rs  main.rs
actions/src/modules/: mod.rs  utils.rs
actions/src/std/: event_sender.lua  fun.lua  pprint.lua  utils.lua
docs/examples/: exampels.adoc  send_notify.lua  switch_scene.lua
examples/: send_notify.lua
site/: astro.config.mjs  bun.lockb  package.json
site/src/content/docs/guides/: example.md
src/: ActionButton.svelte  App.svelte  Button.svelte  Checkbox.svelte  CreateButtonDialog.svelte  Dialog.svelte  IconPicker.svelte  Input.svelte  Toggle.svelte  icons.svelte.ts  main.ts  types.ts  utils.ts  ws.svelte.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/ui/preset/types/: colors copy.ts  colors.ts  direction.ts  position.ts  types.ts
