[package]
name = "linkpad"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35.1", features = ["full"] }
color-eyre = "0.6.2"
rocket = "0.5.0"
ws = { package = "rocket_ws", version = "0.1.0" }
base64 = "0.21.5"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
dirs = "5.0.1"
actions = {package = "a2m8-lib", path = "../actions"}
reqwest = { version = "0.11"}
[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
